--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "scripts": {
     "lint": "eslint src/**.ts --max-warnings=0",
     "build": "rimraf ./dist && tsc",
+    "test": "jest --coverage",
+    "test:watch": "jest --coverage --watch",
     "prepublishOnly": "npm run lint && npm run build"
   },
   "engines": {
@@ -17,10 +19,13 @@
     "puppeteer-extra-plugin-stealth": "^2.7.8"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.8",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.31.0",
+    "jest": "^29.7.0",
     "puppeteer": "^13.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.3.5"
   }
 }
