--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
 	"features": {
 		"ghcr.io/devcontainers/features/node:1": {
 			"version": "22"
-		}
+		},
+		"ghcr.io/devcontainer-community/devcontainer-features/astral.sh-uv:1": {}
 	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
