--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,23 @@
 {
-    "compilerOptions": {
-      "target": "ES2016",
-      "module": "CommonJS",
-      "lib": [
-        "DOM",
-        "ES2015",
-        "ES2016",
-        "ES2017",
-        "ES2018",
-        "ES2019",
-        "ES2020"
-      ],
-      "declaration": true,
-      "declarationMap": true,
-      "sourceMap": true,
-      "outDir": "./dist",
-      "rootDir": "./src",
-      "strict": true,
-      "esModuleInterop": true,
-      "noImplicitAny": false,
-      "types": ["jest"]
-    },
-    "include": [
-        "src/"
-    ],
-    "exclude": [
-        "**/*.spec.ts"
-    ]
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "lib": ["DOM", "ES2018", "ES2019", "ES2020"],
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "outDir": "./dist",
+    "rootDir": ".",
+    "strict": true,
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "types": ["vitest/globals", "node"],
+    "paths": {
+      "@tests/*": ["tests/*"]
+    }
+  },
+  "include": ["src/**/*.ts", "tests/**/*.ts"],
+  "exclude": ["dist", "node_modules"]
 }
