feat: Implement modern test suite with Vitest, enhance documentation, and update TypeScript version

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,6 +5,6 @@
     "outDir": "./dist",
     "types": ["node"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "types/**/*.d.ts"],
   "exclude": ["tests", "node_modules", "dist"]
 }
