--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "module": "CommonJS",
     "moduleResolution": "node",
+    "baseUrl": ".",
     "lib": ["DOM", "ES2018", "ES2019", "ES2020"],
     "declaration": true,
     "declarationMap": true,
@@ -14,10 +15,14 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "types": ["vitest/globals", "node"],
+    "typeRoots": ["./types", "./node_modules/@types", "./node_modules"],
     "paths": {
-      "@tests/*": ["tests/*"]
+      "@tests/*": ["tests/*"],
+      "puppeteer-extra-plugin-stealth/evasions/*": [
+        "types/puppeteer-extra-plugin-stealth.d.ts"
+      ]
     }
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"],
+  "include": ["src/**/*.ts", "tests/**/*.ts", "types/**/*.d.ts"],
   "exclude": ["dist", "node_modules"]
 }
