--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/node": "^25.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-v8": "^4.0.15",
     "eslint": "^7.31.0",
     "puppeteer": "^13.7.0",
     "rimraf": "^6.1.2",
