--- a/techstack.yml
+++ b/techstack.yml
@@ -65,20 +65,18 @@ tools:
   detection_source: ".github/workflows/codeql.yml"
   last_updated_by: Kristian Matthews-Kennington
   last_updated_on: 2023-11-16 11:32:19.000000000 Z
-- name: Jest
-  description: Painless JavaScript Unit Testing
-  website_url: http://facebook.github.io/jest/
-  version: 29.7.0
+- name: Vitest
+  description: A blazing fast unit test framework powered by Vite.
+  website_url: https://vitest.dev/
+  version: 4.0.15
   license: MIT
   open_source: true
   hosted_saas: false
   category: Build, Test, Deploy
   sub_category: Javascript Testing Framework
-  image_url: https://img.stackshare.io/service/830/jest.png
-  detection_source_url: https://github.com/SmolSoftBoi/puppeteer-stealth/blob/main/yarn.lock
+  image_url: https://vitest.dev/logo.svg
+  detection_source_url: https://github.com/SmolSoftBoi/puppeteer-stealth/blob/main/package.json
   detection_source: package.json
-  last_updated_by: Kristian Matthews
-  last_updated_on: 2021-08-01 22:32:21.000000000 Z
 - name: Puppeteer
   description: Headless Chrome Node API
   website_url: https://github.com/GoogleChrome/puppeteer
@@ -116,10 +114,10 @@ tools:
   detection_source: package.json
   last_updated_by: Kristian Matthews
   last_updated_on: 2021-08-01 22:32:21.000000000 Z
-- name: "@types/jest"
-  description: TypeScript definitions for Jest
-  package_url: https://www.npmjs.com/@types/jest
-  version: 29.5.8
+- name: "@vitest/coverage-v8"
+  description: V8-powered coverage provider for Vitest.
+  package_url: https://www.npmjs.com/@vitest/coverage-v8
+  version: 4.0.15
   license: MIT
   open_source: true
   hosted_saas: false
@@ -128,8 +126,6 @@ tools:
   image_url: https://img.stackshare.io/package/15840/default_004658cda9b38934f2871435e9dc15608c86e8be.png
   detection_source_url: https://github.com/SmolSoftBoi/puppeteer-stealth/blob/main/yarn.lock
   detection_source: package.json
-  last_updated_by: Kristian Matthews-Kennington
-  last_updated_on: 2023-11-16 12:46:29.000000000 Z
 - name: "@typescript-eslint/eslint-plugin"
   description: TypeScript plugin for ESLint
   package_url: https://www.npmjs.com/@typescript-eslint/eslint-plugin
@@ -158,11 +154,10 @@ tools:
   detection_source: package.json
   last_updated_by: Kristian Matthews-Kennington
   last_updated_on: 2023-11-16 12:46:29.000000000 Z
-- name: ts-jest
-  description: A preprocessor with source maps support to help use TypeScript with
-    Jest
-  package_url: https://www.npmjs.com/ts-jest
-  version: 29.1.1
+- name: vitest
+  description: A blazing fast unit test framework powered by Vite.
+  package_url: https://www.npmjs.com/vitest
+  version: 4.0.15
   license: MIT
   open_source: true
   hosted_saas: false
@@ -171,5 +166,3 @@ tools:
   image_url: https://img.stackshare.io/package/15864/default_6743ba96cf149a3c3c68a185199f9705d6eff80e.png
   detection_source_url: https://github.com/SmolSoftBoi/puppeteer-stealth/blob/main/yarn.lock
   detection_source: package.json
-  last_updated_by: Kristian Matthews-Kennington
-  last_updated_on: 2023-11-16 12:46:29.000000000 Z
